v1.0.0/modules/schema/pages/class/IntervalBlock.adoc
= `IntervalBlock`
:toclevels: 4


+++Time sequence of readings of the same reading type. Contained interval readings may need conversion through the application of an offset and a scalar defined in associated pending.
Table 548 shows all association ends of IntervalBlock with other classes.
Table 548 – Association ends of Metering::IntervalBlock with other classes
Associations
name
mult to
type
description

0..*
PendingCalculation
0..1
PendingCalculation
Pending calculation to apply to interval reading values contained by this block (after which the resulting reading type is different than the original because it reflects the conversion result).

0..*
IntervalReadings
0..*
IntervalReading
Interval reading contained in this block.

0..*
ReadingType
0..1
ReadingType
Type information for interval reading values contained in this block.

0..*
MeterReading
0..1
MeterReading
Meter reading containing this interval block.


IntervalReading
Data captured at regular intervals of time. Interval data could be captured as incremental data, absolute data, or relative data. The source for the data is usually a tariff quantity or an engineering quantity. Data is typically captured in time-tagged, uniform, fixed-length intervals of 5 min, 10 min, 15 min, 30 min, or 60 min.
Note: Interval Data is sometimes also called "Interval Data Readings" (IDR).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:IntervalBlock`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`IntervalBlock`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
IntervalBlock {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



MeterReading {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IntervalReading {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReadingType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PendingCalculation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}




IntervalBlock -> MeterReading: MeterReading


IntervalBlock -> IntervalReading: IntervalReadings


IntervalBlock -> ReadingType: ReadingType


IntervalBlock -> PendingCalculation: PendingCalculation


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<MeterReading,`MeterReading`>>
| 0..1
| xref::class/MeterReading.adoc[`MeterReading`]
| +++Meter reading containing this interval block.+++

| <<PendingCalculation,`PendingCalculation`>>
| 0..1
| xref::class/PendingCalculation.adoc[`PendingCalculation`]
| +++Pending calculation to apply to interval reading values contained by this block (after which the resulting reading type is different than the original because it reflects the conversion result).+++

| <<ReadingType,`ReadingType`>>
| 0..1
| xref::class/ReadingType.adoc[`ReadingType`]
| +++Type information for interval reading values contained in this block.+++

| <<IntervalReadings,`IntervalReadings`>>
| 0..*
| xref::class/IntervalReading.adoc[`IntervalReading`]
| +++Interval reading contained in this block.+++
|===

'''


//[discrete]
[#IntervalReadings]
=== `IntervalReadings`
+++Interval reading contained in this block.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntervalBlock.IntervalReadings`
| Cardinality
| 0..*
| Type
| xref::class/IntervalReading.adoc[`IntervalReading`]


|===

//[discrete]
[#MeterReading]
=== `MeterReading`
+++Meter reading containing this interval block.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntervalBlock.MeterReading`
| Cardinality
| 0..1
| Type
| xref::class/MeterReading.adoc[`MeterReading`]


|===

//[discrete]
[#PendingCalculation]
=== `PendingCalculation`
+++Pending calculation to apply to interval reading values contained by this block (after which the resulting reading type is different than the original because it reflects the conversion result).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntervalBlock.PendingCalculation`
| Cardinality
| 0..1
| Type
| xref::class/PendingCalculation.adoc[`PendingCalculation`]


|===

//[discrete]
[#ReadingType]
=== `ReadingType`
+++Type information for interval reading values contained in this block.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IntervalBlock.ReadingType`
| Cardinality
| 0..1
| Type
| xref::class/ReadingType.adoc[`ReadingType`]


|===


